[workspace]
resolver = "2"

members = [
    "drink",
    "drink/test-macro",
    "drink-cli",
]

exclude = [
    "examples/",
]

[workspace.package]
authors = ["Cardinal"]
edition = "2021"
homepage = "https://github.com/Cardinal-Cryptography/drink"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Cardinal-Cryptography/drink"
version = "0.8.2"

[workspace.dependencies]
anyhow = { version = "1.0.75" }
cargo_metadata = { version = "0.18.1" }
clap = { version = "4.3.4" }
contract-build = { package = "contract-build", git = "https://github.com/paritytech/cargo-contract", branch = "master" }
contract-metadata = { version = "3.2.0" }
contract-transcode = { version = "3.2.0" }
convert_case = { version = "0.6.0" }
crossterm = { version = "0.26.0" }
parity-scale-codec = { version = "3.4" }
parity-scale-codec-derive = { version = "3.4" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
ratatui = { version = "0.21.0" }
scale-info = { version = "2.5.0" }
serde_json = { version = "1.0" }
syn = { version = "2" }
thiserror = { version = "1.0.40" }
wat = { version = "1.0.71" }

# Substrate dependencies

frame-metadata = { version = "16.0.0" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk", rev = "180a6ad9b0e7f6225304b811f4accf1d13c5dd11", package = "frame-support" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk", rev = "180a6ad9b0e7f6225304b811f4accf1d13c5dd11", package = "frame-system" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk", rev = "180a6ad9b0e7f6225304b811f4accf1d13c5dd11", package = "pallet-balances" }
pallet-contracts = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk", rev = "180a6ad9b0e7f6225304b811f4accf1d13c5dd11", package = "pallet-contracts" }
pallet-contracts-uapi = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk", rev = "180a6ad9b0e7f6225304b811f4accf1d13c5dd11", package = "pallet-contracts-uapi" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk", rev = "180a6ad9b0e7f6225304b811f4accf1d13c5dd11", package = "pallet-timestamp" }
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/polkadot-sdk", rev = "180a6ad9b0e7f6225304b811f4accf1d13c5dd11", package = "sp-core" }
sp-externalities = { version = "0.19.0", git = "https://github.com/paritytech/polkadot-sdk", rev = "180a6ad9b0e7f6225304b811f4accf1d13c5dd11", package = "sp-externalities" }
sp-io = { version = "23.0.0", git = "https://github.com/paritytech/polkadot-sdk", rev = "180a6ad9b0e7f6225304b811f4accf1d13c5dd11", package = "sp-io" }
sp-runtime-interface = { version = "17.0.0", git = "https://github.com/paritytech/polkadot-sdk", rev = "180a6ad9b0e7f6225304b811f4accf1d13c5dd11", package = "sp-runtime-interface" }

#frame-support = { version = "23.0.0" }
#frame-system = { version = "23.0.0" }
#pallet-balances = { version = "23.0.0" }
#pallet-contracts = { package = "pallet-contracts-for-drink", version = "22.0.1" }
#pallet-contracts-primitives = { version = "26.0.0" }
#pallet-timestamp = { version = "22.0.0" }
#sp-core = { version = "23.0.0" }
#sp-externalities = { version = "0.21.0" }
#sp-io = { version = "25.0.0" }
#sp-runtime-interface = { version = "19.0.0" }

# Local dependencies

drink = { version = "0.8.1", path = "drink" }
drink-test-macro = { version = "0.8.1", path = "drink/test-macro" }
